<resources>
    <string name="app_name">POKEMON</string>
    <string name="login_pokemon_class">Pokemon class: </string>
    <string name="login_pokemon_class_air">Air class </string>
    <string name="login_pokemon_class_earth">Earth class </string>
    <string name="login_pokemon_class_water">Water class </string>

    <string name="login_pokemon_name">Pokemo Name: </string>

    <string name="login_pokemon_type">Pokemon Type: </string>
    <string name="login_pokemon_type_vegan">Vegan </string>
    <string name="login_pokemon_type_two_heads">Two heads</string>
    <string name="login_pokemon_type_four_legs">Four legs</string>

    <string name="login_pokemon_power">Pokemon Power</string>
    <string name="login_pokemon_power_weak">Weak</string>
    <string name="login_pokemon_power_normal">Normal</string>
    <string name="login_pokemon_power_strong">Strong</string>

    <string name="Login_pokemon_weight">Pokemon weight: </string>
    <string name="login_pokemon_height">Pokemon height: </string>

    <string name="button_add">Add </string>
    <string name="button_delete">Delete </string>
    <string name="button_update">Update </string>
    <string name="button_search">Search </string>

    <string name="login_invalid_username">Klaidingai įvestas prisijungimo vardas</string>
    <string name="login_invalid_password">Klaidingai įvestas slaptažodis</string>
</resources>
